Added distribution section

--- a/Presentation/01-intro.tex
+++ b/Presentation/01-intro.tex
@@ -98,8 +98,7 @@
 	\end{center}
 }
 \frame{
-	\tableofcontents
-%	[hideallsubsections]
+	\tableofcontents[hideallsubsections]
 }
 
 
@@ -177,6 +176,8 @@
 	\end{itemize}
 \end{frame}
 
+\section{Лицензии}
+
 \begin{frame}{Лицензии: открытые и свободные}
 
 	\begin{block}{ Р.Столлман: 4 свободы}
@@ -216,18 +217,80 @@
 		\item LGPL
 		\item AGPL
 		\item BSD
-		\item Creative Commons *
 		\item MIT
 		\item Mozilla Public License
+		\item Apache Software License
+		\item Creative Commons *
 	\end{itemize}
 \end{frame}
 
+\section{Дистрибутивы ОС Linux}
+
+\begin{frame}{Дистрибутив ОС GNU/Linux}
+	\begin{block}{ Определение}
+		\pause
+		Набор программного обеспечения на базе ядра Linux, распространяющийся как единое целое.
+	\end{block}
+\end{frame}
 
 
+\begin{frame}{Задачи дистрибутива}
+	\begin{itemize}
+		\item Предоставление комплекта ПО (ядро + утилиты)
+		\item Средства установки и настройки
+		\item Средства обновления
+	\end{itemize}
+\end{frame}
 
-\subsection{Дистрибутивы ОС Linux}
+\begin{frame}{Различия между дистрибутивами}
 
+	\Large\center{\bf{Цели!!!}}
 
+	\bigskip
+	\normalsize
+
+	\pause
+
+	\begin{itemize}
+		\begin{columns}
+		\column{0.4\textwidth}
+			\item Инсталлятор
+			\item Первичные настройки
+			\item Средства управления
+			\item Набор ПО
+		\column{0.4\textwidth}
+			\item Менеджер пакетов
+			\item Формат распространения ПО
+			\item Пути к файлам
+			\item Система сборки ПО
+		\end{columns}
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Дистрибутивы}
+	\begin{itemize}
+		\begin{columns}
+		\column{0.3\textwidth}
+			\item RedHat
+			\item Fedora Core
+			\item CentOS
+			\item Scientific Linux
+			\item Oracle Unbreakable Linux
+		\column{0.3\textwidth}
+			\item Slackware 
+			\item Gentoo
+			\item Arch
+			\item OpenSUSE
+			\item ALT Linux 
+		\column{0.3\textwidth}
+			\item Debian
+			\item Ubuntu
+			\item Mint
+			\item Knoppix
+			\item BackTrack
+		\end{columns}
+	\end{itemize}
+\end{frame}
 
 
 \end{document}
