--- a/Presentation/01-command.tex
+++ b/Presentation/01-command.tex
@@ -235,9 +235,18 @@ dir1/dir1.2/dir1.2.2
 \end{frame}
 \begin{frame}{Важные аббревиатуры внутри командной строки}
   \begin{itemize}
-    \item {\tt ~} Домашняя директория
-    \item {\tt ~<username>} Домашняя директория пользователя
-    \item {\tt ../} Родительская директория
+    \item Для директорий
+    \begin{itemize}
+      \item {\tt ~} Домашняя директория
+      \item {\tt ~<username>} Домашняя директория пользователя
+      \item {\tt ../} Родительская директория
+    \end{itemize}
+  \item Wildcards
+    \begin{itemize}
+      \item {\tt *} Любой набор символов {\tt file*txt : file1.txt filefilefiletxt}
+      \item {\tt $[$<список>$]$ } символ из заданного набора
+     \end{itemize}
+
   \end{itemize}
 \end{frame}       
 \begin{frame}{Горячие клавиши}
