--- a/Programm/biblio.bib
+++ b/Programm/biblio.bib
@@ -36,3 +36,12 @@
 	note = "[Online; accessed 26-10-2012]",
 	language = {english},
 }
+
+@misc{boot01,
+	author = {Mc.Sim},
+	title = {Этапы загрузки ОС Linux},
+	year = {2011},
+	howpublished = {\url{http://www.k-max.name/linux/nachalo-etapy-zagruzki-os-linux-v-sxeme/}},
+	note = "[Online; accessed 12-11-2012]",
+	language = {russian},
+}
