--- a/Presentation/02-command.tex
+++ b/Presentation/02-command.tex
@@ -296,7 +296,7 @@ dir1/dir1.2/dir1.2.2
   \item {\tt less} - программа-пейджер
  \end{itemize}
 \end{frame}
-\begin{frame}{Некоторые примеры использования}
+\begin{frame}[fragile]{Некоторые примеры использования}
 \begin{lstlisting}[language=bash]
 ls  | wc -l # подсчет числа файлов
 man uniq | tr  '[:space:]' '\n' | sort | uniq -c | sort -n | less # подсчет количества слов в тексте man uniq
