--- a/Presentation/01-intro.tex
+++ b/Presentation/01-intro.tex
@@ -456,7 +456,7 @@
 	\end{block}
 \end{frame}
 
-\section{Практика}
+\subsection{Практика}
 
 \begin{frame}{Практическое задание}
 	\begin{enumerate}
@@ -472,6 +472,28 @@
 			\pause
 		\item Переопределить загрузочное устройство
 	\end{enumerate}
+\end{frame}
+
+\section*{Файловая структура}
+
+\begin{frame}{Файловая структура}
+	
+	{\center "Дерево внутри дома?" (c) Шрек}
+		
+	\begin{columns}
+	\column{0.2\textwidth}
+		\includegraphics[height=0.8\textheight]{01-lhs.png}
+	\column{0.7\textwidth}
+		\begin{itemize}
+			\item Директории
+			\item Обычные файлы
+			\item Симлинки
+			\item Хардлинки
+			\item Файлы устройств
+			\item FIFO
+			\item сокеты
+		\end{itemize}
+	\end{columns}
 \end{frame}
 
 
