Added FS utils list

--- a/Presentation/02-command.tex
+++ b/Presentation/02-command.tex
@@ -233,6 +233,41 @@ dir1/dir1.2/dir1.2.2
    \end{block}
  \end{columns}
 \end{frame}
+
+\begin{frame}[fragile]{Команды для работы с файлами}
+	\begin{itemize}
+		\begin{columns}
+		\column{0.2\textwidth}
+			\item touch
+			\item ln
+			\item mkdir
+			\item mknod
+			\item mkfifo
+		\column{0.2\textwidth}
+			\item cp
+			\item mv
+			\item install
+			\item rm
+			\item rmdir
+			\item file
+		\column{0.4\textwidth}
+			\begin{block}{Упражнение}
+				Создать иерархию директорий
+
+\begin{lstlisting}
+dir1/dir1.1/dir1.1.1
+dir1/dir1.2/dir1.2.1
+dir1/dir1.2/dir1.2.2
+\end{lstlisting}
+
+				Внутри каждой создать файл
+
+				Удалить все созданное
+			\end{block}
+		\end{columns}
+	\end{itemize}
+\end{frame}
+
 \begin{frame}{Важные аббревиатуры внутри командной строки}
   \begin{itemize}
     \item Для директорий
