Added some practice. Minor fixes

--- a/Presentation/02-command.tex
+++ b/Presentation/02-command.tex
@@ -236,7 +236,8 @@ dir1/dir1.2/dir1.2.2
     \begin{itemize}
       \item {\tt $\sim$} Домашняя директория
       \item {\tt $\sim$<username>} Домашняя директория пользователя
-      \item {\tt ../} Родительская директория
+      \item {\tt ..} Родительская директория
+      \item {\tt .} Текущая директория
     \end{itemize}
   \pause  
   \item Wildcards
@@ -343,7 +344,8 @@ programm <<LABEL
 	     строк
 LABEL
 \end{verbatim}
-	
+
+	\pause
 	\begin{block}{Пример}
 	Передадим несколько строк в COM-порт 1
 \begin{lstlisting}[language=bash]
@@ -357,4 +359,24 @@ E_O_F
 
 \begin{frame}{Кастомизация bash}
 \end{frame}
+
+\begin{frame}[fragile]{Практика}
+	\begin{enumerate}
+		\item Создать директорию в /tmp и перейти в нее
+		\item Создать файл1 состоящий из нескольких строк
+		\item Cкопировать файл1 в файл2
+		\item Добиться того, чтобы файл2 состоял из 3 одинаковых копий файла1
+		\item Создать жесткую ссылку на файл1
+		\item Создать символическую ссылку на файл2
+		\item Вывести на экран список всех файлов
+		\item Добавить вывод команды {\tt date} в файл1
+		\item Вывести на экран список всех файлов
+		\item Вывести на экран содержимое файла1 и жесткой ссылки
+		\item Создать PIPE
+		\item Запустить одну команду {\tt cat} на чтение из PIPE
+		\item Записать содержимое файла1 и файла2 в PIPE
+		\item Удалить временную директорию
+	\end{enumerate}
+\end{frame}
+
 \end{document}
