--- a/Presentation/02-command.tex
+++ b/Presentation/02-command.tex
@@ -276,21 +276,13 @@ dir1/dir1.2/dir1.2.2
  \begin{itemize}
   \item {\tt cat} - Вывод файла в stdout, соединение нескольких файлов в stdout
   \item {\tt wc} - подсчет статистики символов в файле или в stdin 
-    \begin{itemize}
-      \item[-l] считать только строки
-    \end{itemize}
   \item {\tt sort} - сортировка строк файла
-    \begin{itemize}
-      \item[-n] -по числам в начале строки
-      \item[-r] - обратный порядок
-    \end{itemize}
   \item {\tt uniq} - объединение одинаковых строк в одну
-    \begin{itemize}
-      \item[-c] считать одинаковые строки
-      \item[-d] выводить только повторяющиеся строки
-    \end{itemize}
   \item {\tt tr} - замена набора символов
   \item {\tt less} - программа-пейджер
+  \item {\tt grep} - поиск строк, соответствующих регулярному выражению
+  \item {\tt cut} - выделение полей из строк stdin
+  \item {\tt awk} - небольшой язык программирования (также полезен для выделения полей)
  \end{itemize}
 \end{frame}
 \begin{frame}[fragile]{Некоторые примеры использования}
@@ -299,7 +291,12 @@ ls  | wc -l # подсчет числа файлов
 man uniq | tr  '[:space:]' '\n' | sort | uniq -c | sort -n | less # подсчет количества слов в тексте man uniq
 history | wc -l # подсчет ранее введенных команд
 cat /etc/udev/rules.d/* | wc -l
+ls -s *.jpg | awk 'BEGIN{s=0};/^[ ]*[0-9]/{s+=$1};END{print s}'
 \end{lstlisting}
+\pause
+\begin{block}{Упражнение}
+Посчитать статистику использования команд в history
+\end{block}
 \end{frame}
 \begin{frame}{Перенаправления в файл}
 \begin{itemize}
